# home-media-mcp

./: .coverage  .gitignore  pyproject.toml
src/home_media_mcp/: __init__.py  config.py  main.py  server.py
src/home_media_mcp/clients/: __init__.py  radarr.py  sonarr.py
src/home_media_mcp/services/: __init__.py
src/home_media_mcp/services/radarr/: __init__.py  server.py
src/home_media_mcp/services/radarr/tools/: __init__.py  alt_titles.py  blocklist.py  calendar.py  collections.py  commands.py  credits.py  exclusions.py  history.py  manual_import.py  movie_files.py  movies.py  queue.py  reference.py  rename.py  search.py  system.py  wanted.py
src/home_media_mcp/services/sonarr/: __init__.py  server.py
src/home_media_mcp/services/sonarr/tools/: __init__.py  blocklist.py  calendar.py  commands.py  episode_files.py  episodes.py  history.py  manual_import.py  queue.py  reference.py  rename.py  search.py  series.py  system.py  wanted.py
src/home_media_mcp/utils/: __init__.py  filtering.py  formatting.py  resolution.py
tests/: conftest.py  test_config.py
tests/fixtures/radarr/: movie_detail.json  movie_list.json
tests/fixtures/shared/: quality_profiles.json  root_folders.json  tags.json
tests/fixtures/sonarr/: episodes_list.json  series_detail.json  series_list.json
tests/test_tools/: conftest.py  test_radarr_tools.py  test_sonarr_tools.py
tests/test_utils/: test_filtering.py  test_formatting.py  test_resolution.py
