[project]
name = "home-media-mcp"
version = "0.1.0"
description = "MCP server for managing home media services (Sonarr, Radarr, and more)"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "fastmcp>=3.0.0",
    "sonarr-py>=1.1.0",
    "radarr-py>=1.2.0",
]

[project.scripts]
home-media-mcp = "home_media_mcp.main:run"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/home_media_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
